--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          remote_url: https://github.com/cdaieta/demo-gh-pages/tree/gh-pages
+          remote_url: https://github.com/cdaieta/demo-gh-pages.git
           pages_directory: pages
           target_directory: pages
           target_branch: gh-pages
